[package]
name = "migration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"

refinery = { version="0.8.7", features=["tokio-postgres"] }
barrel = { version="0.7.0", features=["pg"] }

tokio-postgres = { version = "0.7.7", features=["with-time-0_3", ] }
postgres-types = { version = "0.2.4", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }

time = "0.3.20"


colored = "2.0.0"